create business with errors

--- a/src/Components/SignUp/style_signup.css
+++ b/src/Components/SignUp/style_signup.css
@@ -1,8 +1,9 @@
-.signup-body {
+
+
+/* .signup-body {
   /* background: #007bff; */
   /* background: linear-gradient(to right, #0062E6, #33AEFF); */
   /* background : #BB2D3B; */
-}
 
 .card-img-left {
   width: 50%;
