--- a/src/Components/Business/style_create_business.css
+++ b/src/Components/Business/style_create_business.css
@@ -5,7 +5,7 @@
   /* background: linear-gradient(to right, #0062E6, #33AEFF); */
   /* background : #BB2D3B; */
 
-  .card-img-left {
+  .business-card-img-left {
     width: 45%;
     /* Link to your background image using in the property below! */
     /* background: scroll center url('https://source.unsplash.com/WEQbe2jBg40/414x512'); */
@@ -13,7 +13,7 @@
     background-size: cover;
   }
   
-  .signup-h3 {
+  .business-h3 {
       font-size: 40px;
       font-family: "ElMessiri-SemiBold";
       text-align: center;
@@ -21,7 +21,7 @@
       color: #E00707;
   }
   
-  .btn-signup {
+  .btn-business {
     font-size: 0.9rem;
     letter-spacing: 0.05rem;
     padding: 0.75rem 1rem;
