--- a/src/Components/Business/Sidebar/sidebar-style.css
+++ b/src/Components/Business/Sidebar/sidebar-style.css
@@ -80,7 +80,7 @@
     color: white;
     transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   }
-  .active {
+  .sidebar-active {
     border-right: 4px solid white;
     /* background: rgb(45, 51, 89); */
     background: #edccca;
