--- a/src/Components/Business/Sidebar/sidebar-style.css
+++ b/src/Components/Business/Sidebar/sidebar-style.css
@@ -9,6 +9,7 @@
   }
   main {
     padding: 10px;
+   
   }
   
   .title {
@@ -20,10 +21,18 @@
   /* Sidebar */
   .sidebar {
     /* background: rgb(0, 7, 61); */
-    background: #E00707;
+    background: #333333;
     color: white;
-    height: 100vh;
+
+    height: 100vh; /* viewport height */
     overflow-y: auto;
+    position: sticky;
+
+    margin-top: 20px;
+    
+    top: 0; /*offset from top*/
+    bottom: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
   }
   
   .top_section {
@@ -49,6 +58,7 @@
     margin: 10px 0;
     height: 30px;
     padding: 10px;
+    
   }
   .search input {
     border: none;
@@ -56,7 +66,7 @@
     border-radius: 5px;
     background: rgb(238, 238, 238);
   
-    color: white;
+    color: black;
   }
   
   .routes {
@@ -72,11 +82,12 @@
     padding: 5px 10px;
     border-right: 4px solid transparent;
     transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+    text-decoration: none;
   }
   .link:hover {
     border-right: 4px solid white;
     /* background: rgb(45, 51, 89); */
-    background-color: #f44336;
+    background-color: #C62828;
     color: white;
     transition: 0.2s cubic-bezier(0.6, -0.28, 0.735, 0.045);
   }
