--- a/src/Components/Business/MyBusiness/styles.css
+++ b/src/Components/Business/MyBusiness/styles.css
@@ -1,41 +1,43 @@
-img {
-  height: 150px;
+/* img {
+  height: 120px;
   width: 100%;
+  padding: auto;
 }
 
 div [class^="col-"] {
   padding-left: 5px;
   padding-right: 5px;
 }
-.card {
+.my-card {
   transition: 0.5s;
   cursor: pointer;
+  background-color: coral;
 }
-.card-title {
+.my-card-title {
   font-size: 15px;
   transition: 1s;
   cursor: pointer;
 }
-.card-title i {
+.my-card-title i {
   font-size: 15px;
   transition: 1s;
   cursor: pointer;
   color: #ffa710;
 }
-.card-title i:hover {
+.my-card-title i:hover {
   transform: scale(1.25) rotate(100deg);
   color: #18d4ca;
 }
-.card:hover {
+.my-card:hover {
   transform: scale(1.05);
   box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
 }
-.card-text {
-  height: auto;
+.my-card-text {
+  height: 50px;
 }
 
-.card::before,
-.card::after {
+.my-card::before,
+.my-card::after {
   position: absolute;
   top: 0;
   right: 0;
@@ -47,15 +49,90 @@ div [class^="col-"] {
   content: "";
   pointer-events: none;
 }
-.card::before {
+.my-card::before {
   transform-origin: left top;
 }
-.card::after {
+.my-card::after {
   transform-origin: right bottom;
 }
-.card:hover::before,
-.card:hover::after,
-.card:focus::before,
-.card:focus::after {
+.my-card:hover::before,
+.my-card:hover::after,
+.my-card:focus::before,
+.my-card:focus::after {
   transform: scale3d(1, 1, 1);
+} */
+
+.my-card {
+  display: grid;
+  grid-template-columns: 200px;
+  /* grid-template-rows: 210px 210px 80px; */
+  grid-template-rows: 100px 100px 50px;
+  grid-template-areas: "image" "text" "stats";
+
+  border-radius: 18px;
+  background: white;
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.9);
+  font-family: roboto;
+  text-align: center;
+
+  transition: 0.5s ease;
+  cursor: pointer;
+  margin:30px;
+
+}
+.my-card-image {
+  grid-area: image;
+}
+.my-card-text {
+  grid-area: text;
+}
+.my-card-stats {
+  grid-area: stats; 
+}
+.my-card-image {
+  grid-area: image;
+  /* background: url("../"); */
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  background-size: cover;
+}
+.my-card-text {
+  grid-area: text;
+  margin: 25px;
+}
+.my-card-text .date {
+  color: rgb(255, 7, 110);
+  font-size:13px;
+}
+.my-card-text p {
+  color: grey;
+  font-size:15px;
+  font-weight: 300;
+}
+.my-card-text h2 {
+  margin-top:0px;
+  font-size:28px;
+}
+.my-card-stats {
+  grid-area: stats; 
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
+
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background: rgb(255, 7, 110);
+}
+.my-card-stats .stat {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  color: white;
+  padding:10px;
+}
+.my-card:hover {
+  transform: scale(1.05);
+  box-shadow: 5px 5px 15px rgba(0,0,0,0.6);
 }
