--- a/src/Components/Business/Sidebar/styles.css
+++ b/src/Components/Business/Sidebar/styles.css
@@ -11,13 +11,14 @@
 
 body{
    background-color: #f3f5f9;
+  /* background: -webkit-linear-gradient(left, #3931af, #00c6ff); */
 }
 
 .wrapper{
   display: flex;
   position: relative;
   /* margin-top: 50px; */
-  top: 50px;
+  /* top: 50px; */
 }
 
 .wrapper .sidebar{
@@ -27,7 +28,7 @@ body{
   /* min-height: 690px; */
   /* margin-top: 100; */
   background: #4b4276;
-  padding: 30px 0px;
+  padding: 0px 0px;
   position: fixed;
   /* position: fixed; */
   /* top: 40px; */
@@ -39,7 +40,8 @@ body{
   color: #fff;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .wrapper .sidebar ul li{
