--- a/src/Components/Business/Sidebar/styles.css
+++ b/src/Components/Business/Sidebar/styles.css
@@ -27,7 +27,8 @@ body{
   /* height: auto !important; */
   /* min-height: 690px; */
   /* margin-top: 100; */
-  background: #4b4276;
+  /* background: #4b4276; */
+  background: #F74231;
   padding: 0px 0px;
   position: fixed;
   /* position: fixed; */
@@ -52,7 +53,8 @@ body{
 }    
 
 .wrapper .sidebar ul li a{
-  color: #bdb8d7;
+  /* color: #bdb8d7; */
+  color: white;
   display: block;
 }
 
@@ -61,7 +63,8 @@ body{
 }
 
 .wrapper .sidebar ul li:hover{
-  background-color: #594f8d;
+  /* background-color: #594f8d; */
+  background-color: #E00707;
 }
     
 .wrapper .sidebar ul li:hover a{
