--- a/src/Components/LandingPage/Home/List/ListItem/styles.css
+++ b/src/Components/LandingPage/Home/List/ListItem/styles.css
@@ -1,7 +1,7 @@
 .listItem-wrap img {
   width: 100%;
   border-radius: 15px;
-  height: 200px;
+  height: auto;
   object-fit: cover;
 }
 .listItem-wrap header {
