--- a/src/Components/Business/pages/BusinessHome/home.css
+++ b/src/Components/Business/pages/BusinessHome/home.css
@@ -8,6 +8,7 @@ body {
     /* background: -webkit-linear-gradient(to right, #654ea3, #eaafc8);
     background: linear-gradient(to right, #654ea3, #eaafc8); */
     min-height: 100vh;
+    width: 100%;
 }
 
 .cover {
