--- a/src/Components/UserProfile/profile.css
+++ b/src/Components/UserProfile/profile.css
@@ -21,7 +21,7 @@
     border: none;
     border-radius: 0;
     font-size: 15px;
-    background: #212529b8;
+    /* background: #212529b8; */
 }
 .profile-img .file input {
     position: absolute;
